<resources>
    <string name="app_name">Balance</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_formulario">Adicionar</string>

    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_sensors">Sensor - Teste</string>
    <string name="title_activity_lista_avaliacoes">Lista de Avaliações</string>


    <string name="dialog_yes">Sim</string>
    <string name="dialog_no">Não</string>

    <string name="salvar">SALVAR</string>


    <string name="anos">anos</string>
    <string name="editar">Editar</string>
    <string name="deletar">Deletar</string>
    <string name="dialog_deletar_paciente">Deseja deletar este paciente e todos os seus exames? Esta ação não poderá ser desfeita.</string>
    <string name="dialog_deletar_avaliacao">Deseja deletar esta avaliação? Esta ação não poderá ser desfeita.</string>
    <string name="atencao_deletar">Deletar Paciente</string>

    <string name="configura_es">Configurações</string>
    <string name="avaliacoes">avaliações</string>
    <string name="divisor">|</string>
    <string name="avaliacoes_anteriores">AVALIAÇÕES ANTERIORES</string>
    <string name="o_paciente_ainda_n_o_realizou_nenhum_teste">Não há exames cadastrados</string>
    <string name="dados_do_paciente">DADOS CADASTRAIS</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="contato">CONTATO</string>
    <string name="abandonar_cadastro">Abandonar Cadastro</string>
    <string name="dialog_abandonar_cadastro">Deseja abandonar o cadastro? Todos os dados do cadastro serão perdidos.</string>
    <string name="bota_o_para_inserir_foto_do_paciente">Botaão para inserir foto do paciente</string>
    <string name="nome_do_paciente">Nome do Paciente</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="description_calendario">Botão para abrir um calendário e escolher a data</string>
    <string name="genero">Gênero</string>
    <string name="description_peso">Ícone de balança</string>
    <string name="massa_corporal_em_kg">Massa corporal (em kg)</string>
    <string name="estatura_em_cm">Estatura (em cm)</string>
    <string name="description_altura">Ícone da altura: fita métrica</string>
    <string name="observacoes">Observações</string>
    <string name="description_telefone">Ícone de Telefone</string>
    <string name="telefone">Telefone</string>
    <string name="e_mail">E-mail</string>
    <string name="description_email">Ícone de e-mail</string>
    <string name="description_obs">Ícone das observaçoes</string>
    <string name="info_clinicas">INFORMAÇÕES CLÍNICAS</string>
    <string name="data_de_anamnese">Data de Anamnese</string>
    <string name="diagnostico_clinico">Diagnostico Clínico</string>
    <string name="hist_rico_da_doen_a_atual">Histórico da Doença Atual</string>
    <string name="hist_rico_de_doen_as_anteriores">Histórico de Doenças Anteriores</string>
    <string name="procedimentos_terap_uticos">Procedimentos terapêuticos</string>
    <string name="balance_avalia_o_do_equil_brio">Balance: Avaliação do Equilíbrio</string>
    <string name="text_inicial">Ainda não há Pacientes Cadastrados.</string>
    <string name="text_header_lista">Balance: Avaliação do Equilíbrio\nSelecione um paciente para realizar um novo exame ou verificar os resultados de exames anteriores</string>
    <string name="data_de_diagnostico">Data de Diagnóstico</string>
    <string name="infor_clinicas">INFORMAÇÕES CLÍNICAS</string>
    <string name="titulo_resultados">Análise da Avaliação</string>
    <string name="avaliacao_singular">avaliação</string>
    <string name="ver_mais">Ver mais</string>
    <string name="nome">Nome</string>
    <string name="idade">Idade</string>
    <string name="area">Área de dispersão</string>
    <string name="duracao">Duração</string>
    <string name="olhos">Olhos</string>
    <string name="exportar">Exportar</string>
    <string name="exportar_csv">Exportar (csv)</string>
    <string name="gravar_no_aparelho">Salvar no aparelho</string>
    <string name="enviar_por_e_mail">Enviar por e-mail</string>
    <string name="como_deseja_gravar_o_arquivo">Como deseja gravar o arquivo?</string>
    <string name="quantas_pernas">Quantas Pernas?</string>
    <string name="uma_perna">Uma perna</string>
    <string name="duas_pernas">Duas Pernas</string>
    <string name="qual_o_estado_dos_olhos">Qual o estado dos olhos?</string>
    <string name="olhos_abertos">Olhos Abertos</string>
    <string name="olhos_fechados">Olhos Fechados</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="prepare_se">Prepare-se...</string>
    <string name="realizando_avalia_o">Realizando Avaliação...</string>
    <string name="iniciar_avalia_o">Iniciar Avaliação</string>
    <string name="selecione_o_tempo_para_prepara_o">Selecione o tempo para preparação:</string>
    <string name="vamos_come_ar">Vamos começar!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="tempo_para_se_preparar_cont">Tempo de espera para se preparar antes de começar a avaliação do paciente</string>
    <string name="clique_na_avaliacao_para_mais_detalhes">Clique na Avaliação para mais detalhes.</string>
    <string name="nenhuma_avaliacao_realizada_ainda">Nenhuma avaliação realizada ainda.</string>
    <string name="title_activity_grafico">GraficoActivity</string>


</resources>
