<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/como_deseja_gravar_o_arquivo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">


        <LinearLayout
            android:padding="5dp"
            android:background="#ededed"
            android:id="@+id/layout_aparelho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingTop="10dp"
                android:contentDescription="@string/gravar_no_aparelho"
                android:src="@drawable/icon_celular"
                android:tint="#757575" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/gravar_no_aparelho" />
        </LinearLayout>


        <LinearLayout
            android:padding="5dp"
            android:background="#f4f4f4"
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:padding="4dp"
                android:contentDescription="@string/enviar_por_e_mail"
                android:tint="#757575"
                android:src="@drawable/icon_export" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Aplicação Externa" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>