<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/quantas_pernas"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">


        <LinearLayout
            android:id="@+id/layout_uma_perna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_uma_perna"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:contentDescription="@string/uma_perna"
                android:padding="8dp"
                android:src="@drawable/icon_uma_perna"
                android:tint="#757575" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/uma_perna" />
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="#e0e0e0" />

        <LinearLayout
            android:id="@+id/layout_duas_pernas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_duas_pernas"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:contentDescription="@string/duas_pernas"
                android:padding="8dp"
                android:src="@drawable/icon_duas_pernas"
                android:tint="#757575" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/duas_pernas" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>